--- a/02.html
+++ b/02.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
-    <h1>Pealkiri</h1>
-    <h2>Alapealkiri</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum odio molestiae, nemo quam excepturi incidunt
-        expedita nesciunt ex similique, ab sunt porro eos magnam vero optio? Excepturi accusamus itaque repudiandae.</p>
+    <h1>See on minu tehtud leht</h1>
+    <h2>Koolitöö</h2>
+    <p>Sigrid Lillep</p>
+    <img src="https://www.gatsbyjs.com/_gatsby/image/a7b4b7d3a899b6f5e3904b91d717435a/26205d6785c052f897faebf0880dcea1/contentful.avif?u=https%3A%2F%2Fgatsbycontent.wpengine.com%2Fwp-content%2Fuploads%2F2020%2F07%2Fcontentful.png&a=w%3D720%26h%3D540%26fm%3Davif%26q%3D75&cd=fed3d55acfac37d6eb4168cd8430a687" alt="">
+
+    </p>
 </body>
 
 </html>
