--- a/hindeline03.html
+++ b/hindeline03.html
@@ -6,7 +6,7 @@
     <title>CSS harjutus</title>
 <!-- link:css -->
  <link rel="stylesheet" href="style.css">
- <!-- nüüd pean eraldi tegema ka faili style.css kuhu sisse hakkan reegleid kirjutama -->
+ <!-- nüüd pean eraldi tegema ka faili style.css kuhu sisse hakkan reegleid kirjutama. selle link: css'i asja teen kõige viimasena. kui alumine asi siin on kirjutatud -->
 </head>
 <body>
     <div class="container">
