--- a/hindeline03.html
+++ b/hindeline03.html
@@ -28,7 +28,7 @@
             <hr>
             <h2>Alapealkiri</h2>
             <!-- kirjuta lihtsalt picsum ja vajuta täb, siis valib ise pildi -->
-            <img src="https://picsum.photos/id/684/600/400" alt="pilt">
+            <img src="https://picsum.photos/600/400" alt="pilt">
             <h2>Täpploend</h2>
             <!-- ul>li*5{Suvaline tekst} -->
              <ul>
