--- a/bs02.html
+++ b/bs02.html
@@ -8,8 +8,32 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="display-1">Veebibeebi</h1>
+      <h1 class="display-1">Lillep.com</h1>
+      <!-- .row>.col*2 -->
+      <div class="row">
+        <div class="col-sm-8">
+          <h1 class="text-primary">Pealkiri</h1>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eaque reprehenderit, necessitatibus at optio libero voluptas temporibus alias modi iste nisi veritatis autem! Accusamus labore dignissimos unde at, deserunt sit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eaque reprehenderit, necessitatibus at optio libero voluptas temporibus alias modi iste nisi veritatis autem! Accusamus labore dignissimos unde at, deserunt sit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eaque reprehenderit, necessitatibus at optio libero voluptas temporibus alias modi iste nisi veritatis autem! Accusamus labore dignissimos unde at, deserunt sit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eaque reprehenderit, necessitatibus at optio libero voluptas temporibus alias modi iste nisi veritatis autem! Accusamus labore dignissimos unde at, deserunt sit.</p>
+          <h2>Alapealkiri</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint odit at, officiis laudantium impedit facere eaque, earum repellat possimus voluptatibus incidunt culpa laborum fugiat itaque illo placeat, eos facilis.</p>
+        </div>
+        <div class="col-sm-4">
+          <h2>Loend siia</h2>
+          <ul class="list-unstyled">
+            <li>Lorem Ipsum</li>
+            <li>Lorem Ipsum</li>
+            <li>Lorem Ipsum</li>
+            <li>Lorem Ipsum</li>
+            <li>Lorem Ipsum</li>
+          </ul>
 
+        </div>
+      </div>
+
+      </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
