--- a/CV.html
+++ b/CV.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1 class="text-center">Sigrid Lillep</h1>
+        <h1 style="font-size: 48px;" class="text-center">Sigrid Lillep</h1>
     </div>
     <div class="menu">
       <div class="row mt-2">
