--- a/CV.html
+++ b/CV.html
@@ -21,7 +21,7 @@
         <div class="col-sm-9">
           <p>&#9742; +372 5562 9741</p>
           <p>&#9993; sigridlillep@gmail.com</p> <hr>
-          <h2 class="text-primary">KOKKUVÕTE</h2>
+          <h2 style="color: #97a7bc">KOKKUVÕTE</h2>
           <p>Oma tööalast kasvamist olen alustanud noorena teenindussektoris, kus arendasin
             välja suurepärased suhtlemis- ja probleemide lahendamise oskused. Sealt
             liikusin edasi globaalse suurettevõtte finantsosakonda, kus täpsus ning tiimitöö
@@ -34,29 +34,29 @@
       </div>
       <div class="row">
         <div class="col-sm-3">
-          <h2 class="text-primary">HARIDUS</h2>
+          <h2 style="color: #97a7bc">HARIDUS</h2>
           <ul>
             <li><strong>Haapsalu Kutsehariduskeskus</strong> <br>IT-süsteemide nooremspetsialist <br><i>2024 - 2026</i></li>
             <li><strong>Tallinna Majanduskool</strong> <br>Maksundus <br><i>2009 - 2013 (lõpetamata)</i></li> <hr>
           </ul>
-          <h2 class="text-primary">TÄIENDHARIDUS</h2>
+          <h2 style="color: #97a7bc">TÄIENDHARIDUS</h2>
           <ul>
             <li><strong>Software Development Academy</strong> <br>Software tester <br><i>09.2023 - 12.2023 (122h)</i></li>
             <li><strong>Täiskasvanute koolituskeskus </strong><br>Sekretär-asjaajaja <br><i>2014 (60h)</i></li> <hr>
           </ul>
-          <h2 class="text-primary">KEELED</h2>
+          <h2 style="color: #97a7bc">KEELED</h2>
           <ul>
             <li>Eesti - emakeel</li>
             <li>Inglise - C2</li>
             <li>Vene - A1</li> <hr>
           </ul>
-          <h2 class="text-primary">LISA</h2>
+          <h2 style="color: #97a7bc">LISA</h2>
           <p>B-kat autojuhiluba <br><i>2007</i></p>
 
         </div>
 
         <div class="col-sm-9">
-          <h2 class="text-primary">TÖÖKOGEMUS</h2>
+          <h2 style="color: #97a7bc">TÖÖKOGEMUS</h2>
           <ul>
             <li><strong>Svenska Bioforce AB Eesti filiaal</strong> <br>Müügijuht <br><i>08.2022 - 10.2024</i><br>
             A.Vogel ja Biotta brändi edendamine Eestis. Müügitegevuste planeerimine ja organiseerimine. Müügitulemuste analüüsimine ning turundusplaanide ettevalmistamine. Vastutav igakuiste ja -aastaste aruannete eest. Müügitöötajate töö organiseerimine. Kliendisuhete arendamine - uute klientide leidmine olemasolevate hoidmine, müügipakkumiste ja kampaaniate korraldamine. Ürituste korraldamine brändi nähtavuse hoidmiseks.</li> <hr>
