--- a/bs04.html
+++ b/bs04.html
@@ -5,15 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         .jumbo{
             background-image: url("https://picsum.photos/id/484/1400/400");
             color: #fff;
         }
+
+        .card-img-top{
+            width: 100%;
+            height: 15vw;
+            object-fit: cover;
+    }
+        
     </style>
 
   </head>
   <body>
+<!--jumbo-->
     <div class="container">
         <div class="p-5 mb-4 bg-body-tertiary rounded-3 text-center jumbo"> 
             <div class="container-fluid py-5"> 
@@ -21,6 +32,49 @@
                 class="fs-4">Using a series of utilities.</p>  
             </div> 
         </div>
+<!--kaardid-->
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://picsum.photos/id/500/600/400" class="card-img-top" alt="esimene pilt">
+                <div class="card-body">
+                    <h5 class="card-title">Esimene pilt</h5>
+                    <span class="badge text-bg-primary">Primary</span>
+                    <span class="badge text-bg-secondary">Secondary</span>
+                    <span class="badge text-bg-success">Success</span>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis magnam repudiandae consequuntur harum ad magni, sed consectetur ea cumque ipsum quas nisi! Dolore nemo veritatis exercitationem eos necessitatibus ratione consectetur?</p>
+                    <i class="fa-brands fa-twitter fa-2x"></i>
+                    <i class="fa-brands fa-facebook fa-2x"></i>
+                    <i class="fa-brands fa-threads fa-2x"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://picsum.photos/id/400/600/400" class="card-img-top" alt="teine pilt">
+                <div class="card-body">
+                    <h5 class="card-title">Teine pilt</h5>
+                    <span class="badge text-bg-danger">Danger</span>
+                    <span class="badge text-bg-warning">Warning</span>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, error id, tempore vitae nihil facere exercitationem quisquam maiores voluptates beatae numquam dicta eligendi iste reprehenderit molestiae optio consectetur nemo voluptatibus!</p>
+                    <i class="fa-brands fa-threads fa-2x"></i>
+                    <i class="fa-brands fa-bluesky fa-2x"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <iframe class="card-img-top" width="100%" height="315" src="https://www.youtube.com/embed/OryAeg7zuQ0?si=u6Z2J391beR9w4Hq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="card-body">
+                  <h5 class="card-title">Video</h5>
+                  <span class="badge text-bg-info">Info</span>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus minus, id voluptatum rerum expedita, error adipisci, necessitatibus unde dolorum cupiditate tempora non soluta? Et ratione quae delectus sint quas maxime.</p>
+                  <i class="fa-brands fa-google-plus-g fa-2x"></i>
+                </div>
+              </div>
+            </div>
+
+          </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
