--- a/bs04_05.html
+++ b/bs04_05.html
@@ -6,7 +6,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
 
     <style>
         .jumbo{
@@ -24,9 +24,37 @@
 
   </head>
   <body>
-<!--jumbo-->
     <div class="container">
-        <div class="p-5 mb-4 bg-body-tertiary rounded-3 text-center jumbo"> 
+<!--menüü-->
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"> Veebibeebi.ee</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Avaleht</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">E-pood</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kassa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <button class="btn btn-success" type="submit"><i class="fa-solid fa-user"></i> Logi sisse</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <!--jumbo-->
+        <div class="p-5 mb-4 bg-body-tertiary text-center jumbo"> 
             <div class="container-fluid py-5"> 
                 <h1 class="display-5">Custom jumbotron</h1> <p 
                 class="fs-4">Using a series of utilities.</p>  
@@ -64,7 +92,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <iframe class="card-img-top" width="100%" height="315" src="https://www.youtube.com/embed/OryAeg7zuQ0?si=u6Z2J391beR9w4Hq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="card-img-top" height="315" src="https://www.youtube.com/embed/OryAeg7zuQ0?si=u6Z2J391beR9w4Hq" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="card-body">
                   <h5 class="card-title">Video</h5>
                   <span class="badge text-bg-info">Info</span>
