--- a/bs04_05.html
+++ b/bs04_05.html
@@ -28,7 +28,7 @@
 <!--menüü-->
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> Veebibeebi.ee</a>
+      <a class="navbar-brand" href="#"> <i class="fa-solid fa-rocket"></i> Veebibeebi.ee</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
